# catss

./: .gitignore  LICENSE  README.md  pyproject.toml
catss/: align_vulgate.py  betacode.py  books.py  build_db.py  build_vulgate.py  cli.py  download.py  gloss_vulgate.py  lemmatize_vulgate.py  parse_lxxmorph.py  parse_parallel.py  parse_vulgate.py  query.py  split.py
scripts/: smoke_betacode.py
tests/: test_align_vulgate.py  test_betacode.py  test_build_db.py  test_lemmatize_vulgate.py  test_parse_lxxmorph.py  test_parse_parallel.py  test_parse_vulgate.py
