[project]
name = "catss"
version = "0.1.0"
description = "Queryable CATSS database: parallel MT/LXX + LXX morphology, BETA decoded to Unicode"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
catss = "catss.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["catss*"]
